--- a/ms2/index.html
+++ b/ms2/index.html
@@ -142,7 +142,7 @@
         <a href="ironymelo.ms2mml">Lead</a>
       </td>
       <td align="center">
-        Guitar<br>
+        Acoustic Guitar<br>
         Clarinet
       </td>
       <td align="center" valign="middle">
@@ -165,7 +165,7 @@
       </td>
       <td align="center">
         Piano<br>
-        Bass/Harp<br>
+        Acoustic Bass/Harp<br>
         Clarinet
       </td>
       <td align="center" valign="middle">
