--- a/sgfr/index.html
+++ b/sgfr/index.html
@@ -2,6 +2,7 @@
 <head>
 	<title>SGFR</title>
 	<link rel="stylesheet" href="style.css" type="text/css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	<div id="container">
