--- a/sgfr/sgfr-0001/index.html
+++ b/sgfr/sgfr-0001/index.html
@@ -3,7 +3,7 @@
 	<title>SGFR-0001</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,700;1,500;1,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="../style.css" type="text/css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -23,9 +23,131 @@
 			<div class="albumsplash" style="background-image: url(bc.jpg);">
 				<span>Halation Celebration ~ 10th Anniversary Tribute to Snow halation</span>
 			</div>
-			<div class="releasetext">
-				This is a tribute album to Love Live's Christmas classic "Snow halation", where many of our most talented artists got together to remix Snow halation in many different styles in celebration of its 10th anniversary!
+			<div class="text">
+				Halation Celebration is a tribute album to Love Live's Christmas classic "Snow halation", where many of our most talented artists got together to remix Snow halation in many different styles in celebration of its 10th anniversary!
 			</div>
+			<h1 class="heading" id="download">DOWNLOAD</h1>
+			<table>
+				<tr>
+					<td><img src="../img/drive_logo.png" alt="Google Drive"></td>
+					<td><img src="../img/mega_logo.png" alt="MEGA"></td>
+					<td rowspan=3><a href="https://gilvasunner.bandcamp.com/album/halation-celebration-10th-anniversary-tribute-to-snow-halation"><img src="../img/bc_logo.png" alt="Bandcamp"><br>Bandcamp</a></td>
+				</tr>
+				<tr>
+					<td><a href="https://drive.google.com/file/d/1l7dwSPMt8eQvKh5M3mgsIvUq69Cj8J4-/view">MP3</a></td>
+					<td><a href="https://mega.nz/file/6sxm2BZB#dumPI-2sjuuNZhnBCwd9xG3kdtE4b_z8rDf4OljYxqM">MP3</a></td>
+				</tr>
+				<tr>
+					<td><a href="https://drive.google.com/file/d/1jdcmitoqjhpxNt6sftp11ygSnBdBwMrv/view">FLAC</a></td>
+					<td><a href="https://mega.nz/file/zwxCHJCb#5pXvi6pRoZh6sTQ695yI5aJ28kRojUXFdPBiop7JNDY">FLAC</a></td>
+				</tr>
+			</table>
+			<h1 class="heading" id="tracks">TRACKS</h1>
+			<ol>
+				<li>
+					<b>Start the Halation!</b><br>
+					Arrangement: <i>IzzyKart57</i>
+				</li>
+				<li>
+					<b>Snow Halation (disctr4k remix)</b><br>
+					Arrangement: <i>disctr4k</i>
+				</li>
+				<li>
+					<b>snow-fi hip hop beats to halate to</b><br>
+					Arrangement: <i>Ethan</i>
+				</li>
+				<li>
+					<b>What the Snow has become.</b><br>
+					Arrangement: <i>Nanita</i>
+				</li>
+				<li>
+					<b>Snow Halation (Fashionable Mix)</b><br>
+					Arrangement: <i>ViRiX Dreamcore</i>
+				</li>
+				<li>
+					<b>Moog Halation</b><br>
+					Arrangement: <i>Mikroscopic</i>
+				</li>
+				<li>
+					<b>Kokoro no 190 BPM Melody</b><br>
+					Arrangement: <i>someone2639</i>
+				</li>
+				<li>
+					<b>Todo-K (ft. DJ Professor K)</b><br>
+					Arrangement: <i>Ahmaykmewsik</i><br>
+					featuring <i>Chase Beck</i> as DJ Professor K
+				</li>
+				<li>
+					<b>SnOPL3 Improvisation</b><br>
+					Arrangement: <i>Emm Bee Sea, vince94</i>
+				</li>
+				<li>
+					<b>snow halation but it shreds</b><br>
+					Arrangement: <i>Joshua Taipale, Nolithium</i><br>
+					Guitars: <i>Joshua Taipale</i><br>
+					Guitars, Bass, &amp; Programming: <i>Nolithium</i><br>
+					Saxophone: <i>Charles Ritz</i><br>
+					Mixing &amp; Mastering: <i>Nolithium</i>
+				</li>
+				<li>
+					<b>Snow Halation (Amarin's 10th Anniversary Funkot &amp; Bass Remix)</b><br>
+					Arrangement: <i>Amarin</i>
+				</li>
+				<li>
+					<b>Ska Halation</b><br>
+					Arrangement: <i>Mochi</i>
+				</li>
+				<li>
+					<b>Snow Halation (ludosmo hardcore remix)</b><br>
+					Arrangement: <i>ludosmo</i>
+				</li>
+				<li>
+					<b>Resonating Feelings</b><br>
+					Arrangement: <i>Netyasha Roozi, M&amp;M</i>
+				</li>
+				<li>
+					<b>reach.</b><br>
+					Arrangement: <i>just brendan</i>
+				</li>
+				<li>
+					<b>Snow &amp; Halation</b><br>
+					Arrangement: <i>BRUUUUUH</i>
+				</li>
+				<li>
+					<b>Appalachian Snow</b><br>
+					Arrangement: <i>Paco &amp; Billy</i><br>
+					Guitar: <i>Andrew Roszel</i><br>
+					Banjo &amp; Vocals: <i>Will Walen</i>
+				</li>
+				<li>
+					<b>Huling Pagbuhos</b><br>
+					Arrangement: <i>Vermeen</i>
+				</li>
+				<li>
+					<b>Snowblind - An Interlude</b><br>
+					Arrangement: <i>wookywok</i>
+				</li>
+				<li>
+					<b>Snow halation (SoundCirclet Remix)</b><br>
+					Arrangement: <i>dante / SoundCirlet</i>
+				</li>
+				<li>
+					<b>Snow Halation (80s Remix)</b><br>
+					Arrangement: <i>Sarvéproductions</i>
+				</li>
+				<li>
+					<b>Snowed In.</b><br>
+					Arrangement: <i>Nikki+</i>
+				</li>
+				<li>
+					<b>Gelid Dreams</b><br>
+					Arrangement: <i>Jamangar</i>
+				</li>
+				<li>
+					<b>Nozomi Wasn't Lying...</b><br>
+					Arrangement: <i>SmokyThrill77</i>
+				</li>
+			</ol>
 		</div>
 	</div>
 </body>
