--- a/sgfr/sgfr-0001/index.html
+++ b/sgfr/sgfr-0001/index.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,700;1,500;1,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="../style.css" type="text/css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8">
 </head>
 <body>
 	<div id="container">
@@ -133,7 +134,7 @@
 				</li>
 				<li>
 					<b>Snow Halation (80s Remix)</b><br>
-					Arrangement: <i>Sarvéproductions</i>
+					Arrangement: <i>SarvÃ©productions</i>
 				</li>
 				<li>
 					<b>Snowed In.</b><br>
