--- a/ms2/index.html
+++ b/ms2/index.html
@@ -3,7 +3,7 @@
 
 <h1>MapleStory 2 arrangements</h1>
 <b>All arrangements by MtH.</b><br>
-<a href="https://twitter.com/MtH13208">Twitter</a> | <a href="http://youtube.com/user/pikachu000000000">YouTube</a>
+<a href="https://twitter.com/emmnyaa">Twitter</a> | <a href="http://youtube.com/user/pikachu000000000">YouTube</a>
 
 <table>
   <tbody>
